# RBE4915

./: CMakeLists.txt  README.md  hello_world_cv.cpp  interpret_string.v2  packet.py  tcp_client.py  trajectory_management.py  tst.tcp.client.v2  tst.tcp.server.v2
IR Rangefinder/: README.txt
IR Rangefinder/IR_rangefinder_efuse_test/: IR_rangefinder_efuse_test.ino
VideoStreaming/: server.py
cv/: CMakeLists.txt  hello_world_cv.cpp
rpi/: client.py  im_test.py  imageread.cpp  stream_test.py  video_stream.py
rpi/mjpg-streamer-experimental/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  mjpg_streamer
rpi/mjpg-streamer-experimental/_build/plugins/input_file/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/input_http/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/input_opencv/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/input_ptp2/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/input_raspicam/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/input_uvc/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/output_file/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/output_http/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/output_rtsp/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/output_udp/: Makefile  cmake_install.cmake
rpi/mjpg-streamer-experimental/_build/plugins/output_viewer/: Makefile  cmake_install.cmake
tk/: CMakeCache.txt  CMakeLists.txt  Makefile  cars_sobel.avi  cmake_install.cmake  cv_hello  cv_mat  cv_mat.cpp  im_test.py  imageread  imageread.cpp  math.cpp
tk/arms/: CMakeLists.txt  arm_april.cpp  arm_april.h  arm_aruco.h  arm_control.cpp  arm_control.h  math.cpp  tcp_client.py  tracker.cpp  tracker.h  trajectory_management.py
tk/arms/apriltags-cpp/: CMakeLists.txt  Makefile  camtest  cmake_install.cmake  gltest  maketags  quadtest  tagtest
tk/arms/apriltags-cpp/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tk/markers/: CMakeCache.txt  CMakeLists.txt  Makefile  arm.cpp  arm.h  arm_april.cpp  arm_april.h  arm_aruco.cpp  arm_aruco.h  cmake_install.cmake  print_markers  read_markers  read_markers.cpp
tk/markers/apriltags-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  camtest  cmake_install.cmake  gltest  maketags  quadtest  tagtest
tk/markers/apriltags-cpp/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tk/servers/: CMakeLists.txt  aruco_camera.cpp  aruco_camera.h  client.cpp  human_tracker.cpp  human_tracker.h  server.cpp  server.h  video_server.cpp
tk/videostreaming/: CMakeCache.txt  CMakeLists.txt  Camera_Calib.yml  Makefile  UDPClient.h  client  cmake_install.cmake  server  server.cpp  server.h  video_server  video_server.cpp
videostreaming/: CMakeLists.txt  UDPVideoProtocol.h  client.cpp  server.cpp
